# aria2track

./: .gitignore  .gitmodules  README.md  environment.yaml  pyproject.toml  run_pipeline.sh
da3_outputs/drill/: c2w_cam0.npy  point_cloud.npz
src/: auto_scale_mesh.py  check_aria_data.py  compare_meshes.py  prepare_aria_data.py  prepare_fp_data.py  prepare_images_da3.py  run_foundationpose.py  run_mvsam3d.py  visualize_glb.py  visualize_scene.py  visualize_tracking.py
