[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria2mesh"
version = "0.1.0"
description = "Metrically accurate 3D object reconstruction from Aria Gen 2 recordings"
readme = "README.md"
requires-python = "==3.11.*"
license = {file = "LICENSE"}
dependencies = [
    # Visualization and utilities
    "viser",
    "tyro",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ipykernel",
]

[tool.setuptools]
packages = ["aria2mesh", "aria2mesh.utils"]

[tool.setuptools.package-dir]
aria2mesh = "src"
"aria2mesh.utils" = "src/utils"

[tool.setuptools.package-data]
aria2mesh = ["py.typed"]

